tdf#153287 rollover in dark mode with "Explorer" is incongruous

Using "CFD" gives a brighter border with rollover, but no notable
focus state when focused. Try a combination here to get something
decent.

Change-Id: If7844cb0f1e88410959aa622b0271c3f3954230e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146384
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>